# src/lib/api/models/LoginResponseInfo.ts
@@ -4,10 +4,8 @@
 /* eslint-disable */
 import type { UUID } from './UUID';
 export type LoginResponseInfo = {
-    accessToken?: string;
     email?: string;
     expiration?: string;
-    refreshToken?: string;
     userName?: string;
     user_id?: UUID;
 };
